--- a/css/style.css
+++ b/css/style.css
@@ -154,13 +154,14 @@
 }
 
 .carousel-caption h3 {
-    font-size: 50px;
+    font-size: 30px;
     font-family: 'Kufam', cursive;
     font-weight: 700;
 }
 
 .carousel-caption p {
     margin-bottom: 40px;
+    font-size: 20px;
 }
 
 .button-now {
@@ -223,6 +224,7 @@
 
 .select-item:hover {
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+    /* background: #F6AC4D; */
 }
 
 .select-item:hover .item-info h3 {
@@ -230,8 +232,8 @@
 }
 
 .select-item img {
-    width: 130px;
-    height: 130px;
+    width: 170px;
+    height: 160px;
     object-fit: cover;
 }
 
@@ -248,15 +250,32 @@
 }
 
 .select-item .item-info p {
+    padding: 7px 0px;
     font-size: 14px;
     color: #333333d9;
     margin: 0;
 }
 
+.select-item .item-info .button-now-2 {
+    padding-top: 20px;
+    border: none;
+    color: #faa83c;
+    background: #fcdcb1;
+    padding: 5px 12px;
+    border-radius: 30px;
+}
+
+.select-item .item-info .button-now-2:hover {
+    border: 2px solid #F6AC4D;
+    background: none;
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+}
+
 .content {
     font-weight: bold;
     width: 150px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    margin-top: 50px;
     padding: 5px 0;
     border-bottom: 3px solid #F6AC4D;
 }
