--- a/css/style.css
+++ b/css/style.css
@@ -291,20 +291,30 @@
     border-bottom: 4px solid #F6AC4D;
 }
 
-.about-us p {
+.about-us .text {
     text-align: center;
     font-weight: 600;
-    font-size: 18px;
-}
-
-.about-us .choose-me span {
-    width: 50px;
-    font-size: 30px;
-    margin: 0px 20px;
+    font-size: 19px;
+    line-height: 20px;
 }
 
 .about-us .choose-me {
     display: flex;
-    margin-bottom: 30px;
-    cursor: pointer;
+    margin-top: 40px;
+    float: left;
+}
+
+.about-us .choose-me span {
+    font-size: 40px;
+    margin: 0px 20px;
+    color: #F6AC4D;
+}
+
+
+/* .about-us .choose-me h3 {
+    font-weight: 500;
+} */
+
+.about-us .choose-me p {
+    font-size: 18px;
 }
