--- a/css/style.css
+++ b/css/style.css
@@ -264,57 +264,78 @@
     margin: 0;
 }
 
-.select-item .item-info .button-now-2 {
-    padding-top: 20px;
-    border: none;
-    color: #faa83c;
-    background: #fcdcb1;
-    padding: 5px 12px;
-    border-radius: 30px;
-}
-
-.select-item .item-info .button-now-2:hover {
-    border: 2px solid #F6AC4D;
-    background: none;
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-}
-
 
 /* about us */
 
-.about-us h2 {
+.content-2 {
     font-weight: bold;
-    width: 440px;
-    margin-bottom: 40px;
-    margin-top: 50px;
+    width: 430px;
+    margin: 50px 0px;
     padding: 5px 0;
     border-bottom: 4px solid #F6AC4D;
 }
 
-.about-us .text {
+.about-us {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 250px 250px;
+}
+
+.about-us img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.item1 {
+    grid-column: span 1;
+    grid-row: span 2;
+    height: 100%;
+    object-fit: cover;
+    position: relative;
+}
+
+.item2 img {
+    rotate: 180deg;
+}
+
+.item2 {
+    position: relative;
+}
+
+.item3 img {
+    width: 50%;
+}
+
+.item3 {
+    background: #D2C7E9;
+    position: relative;
+}
+
+.info {
+    position: absolute;
+    top: 0;
+    padding: 45px 20px;
+}
+
+.item1 .info {
     text-align: center;
-    font-weight: 600;
-    font-size: 19px;
-    line-height: 20px;
-}
-
-.about-us .choose-me {
-    display: flex;
-    margin-top: 40px;
-    float: left;
-}
-
-.about-us .choose-me span {
-    font-size: 40px;
-    margin: 0px 20px;
-    color: #F6AC4D;
-}
-
-
-/* .about-us .choose-me h3 {
-    font-weight: 500;
-} */
-
-.about-us .choose-me p {
     font-size: 18px;
+    padding: 25px 85px;
+}
+
+.item2 .info {
+    width: 50%;
+    font-size: 18px;
+}
+
+.item3 .info {
+    width: 50%;
+    right: 0;
+    font-size: 18px;
+}
+
+.info h3 {
+    font-weight: bold;
+    text-transform: uppercase;
 }
