--- a/css/style.css
+++ b/css/style.css
@@ -357,3 +357,110 @@
     transform: scale(1.05);
     transition: .3s all;
 }
+
+
+/* counter */
+
+.counter-info {
+    padding-top: 80px;
+    font-size: 20px;
+}
+
+.counter-info h2 {
+    text-align: center;
+    font-weight: 600;
+    padding-bottom: 40px;
+}
+
+.counter-img {
+    padding: 50px;
+}
+
+#shiva {
+    float: left;
+    margin: 5px;
+}
+
+#shiva .title {
+    margin-top: 0;
+}
+
+.count {
+    line-height: 100px;
+    color: #F6AC4D;
+    margin-left: 50px;
+    font-size: 55px;
+    font-weight: 600;
+}
+
+
+/* footer */
+
+footer {
+    padding: 30px 0px 0px 0px;
+    background: #F6AC4D;
+    color: #3E2311;
+    /* border-bottom: 2px solid #3E2311; */
+    position: relative;
+}
+
+footer h3 {
+    font-weight: 600;
+    text-align: center;
+    padding-top: 20px;
+}
+
+footer p {
+    font-size: 18px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.footer2 li {
+    cursor: pointer;
+}
+
+.footer3 li {
+    text-align: center;
+}
+
+.footer3 li a {
+    color: #3E2311;
+    font-size: 22px;
+    margin: 20px;
+}
+
+.footer-bottom {
+    width: 100%;
+    background: #333;
+}
+
+.footer-bottom p {
+    font-weight: 600;
+    padding: 10px;
+    margin: 0;
+    color: white;
+}
+
+footer .text-input {
+    width: 350px;
+    background: #f7c079;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 3px;
+    padding: 3px;
+    color: white;
+}
+
+footer a:hover {
+    border: 1px solid rgb(247, 103, 103);
+}
+
+footer .btn-send {
+    width: 80px;
+    border-radius: 5px;
+    padding: 5px;
+    background: black;
+    border: none;
+    color: white;
+}
