--- a/css/style.css
+++ b/css/style.css
@@ -293,11 +293,8 @@
     height: 100%;
     object-fit: cover;
     position: relative;
-<<<<<<< Updated upstream
     overflow: hidden;
     color: white;
-=======
->>>>>>> Stashed changes
 }
 
 .item2 img {
@@ -306,7 +303,6 @@
 
 .item2 {
     position: relative;
-<<<<<<< Updated upstream
     overflow: hidden;
     color: white;
 }
@@ -317,12 +313,10 @@
     height: 200px;
     margin: 25px 0px 25px 90px;
     border-radius: 50%;
-=======
 }
 
 .item3 img {
     width: 50%;
->>>>>>> Stashed changes
 }
 
 .item3 {
@@ -359,12 +353,15 @@
     text-transform: uppercase;
 }
 
-<<<<<<< Updated upstream
 .item1 img:hover,
 .item2 img:hover,
 .item3 img:hover {
     transform: scale(1.05);
     transition: .3s all;
+}
+
+.item1:hover {
+    transform: scale(1.05);
 }
 
 
@@ -472,8 +469,4 @@ footer .btn-send {
     background: black;
     border: none;
     color: white;
-=======
-.item1:hover {
-    transform: scale(0.05);
->>>>>>> Stashed changes
 }
