--- a/css/service.css
+++ b/css/service.css
@@ -140,13 +140,64 @@
 }
 
 
+/* content */
+
+.banner img {
+    width: 100%;
+}
+
+
+/* booking */
+
+img {
+    width: 100%;
+}
+
+.booking {
+    padding: 50px 0px;
+}
+
+.booking h2 {
+    text-align: center;
+    text-transform: uppercase;
+    color: #F6AC4D;
+    font-weight: 600;
+    padding-bottom: 20px;
+}
+
+.form-group .btn-booking {
+    background: #F6AC4D;
+    color: black;
+    padding: 5px;
+    width: 305px;
+    height: 39px;
+    border: none;
+    border-radius: 5px;
+}
+
+.form-group input:hover {
+    border: 1px solid #F6AC4D;
+    transform: scale(1.01);
+}
+
+
+/* service */
+
+.service {
+    margin: 50px 0px;
+}
+
+.col-md-4 {
+    margin: 30px 0px;
+}
+
+
 /* footer */
 
 footer {
     padding: 30px 0px 0px 0px;
     background: #F6AC4D;
     color: #3E2311;
-    /* border-bottom: 2px solid #3E2311; */
     position: relative;
 }
 
