--- a/css/service.css
+++ b/css/service.css
@@ -226,11 +226,10 @@ img {
 /* price */
 
 blockquote {
-    position: relative;
     font-size: 20px;
     margin: 20px;
     padding: 0px 25px;
-    border-left: 2px solid #F6AC4D;
+    border-left: 5px solid #F6AC4D;
     font-style: italic;
     color: #333;
 }
@@ -270,6 +269,10 @@ footer p {
     font-size: 18px;
     margin-top: 20px;
     text-align: center;
+}
+
+.footer1 span {
+    font-weight: 600;
 }
 
 .footer2 li {
